infra/argo-workflows/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argocd
spec:
  parentRefs:
  - name: shared-gateway
    namespace: gateway
  hostnames:
  - "argo-workflows.lab.sturla.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
